[project]
name = "steam_catcher"
version = "0.1.0"
description = ""
authors = [
    {name = "jamescheaton",email = "jcheaton97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "betfairlightweight (>=2.20.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
